--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Smaranjit Maiti Portfolio",
+  "name": "Smaranjit Maiti Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo64.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "logo120.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "120x120"
     },
     {
-      "src": "logo512.png",
+      "src": "logo240.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "240x240"
     }
   ],
   "start_url": ".",
